testFlask/deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/connects-to: mysql
  name: testflask
  namespace: apptest
  labels:
    app: testflask
    app.kubernetes.io/part-of: testflask
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: testflask
    deploymentconfig: testflask
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: testflask
        deploymentconfig: testflask
    spec:
      containers:
        - name: testflask
          image: >-
            image-registry.openshift-image-registry.svc:5000/apptest/testflask:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
