testFlask/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: testflask
  namespace: apptest
  labels:
    app: testflask
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: testflask
    deploymentconfig: testflask
  type: ClusterIP
  sessionAffinity: None
