testFlask/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: testflask
  namespace: apptest
  labels:
    app: testflask
spec:
  host: testflask-apptest.apps.cluster1.moyegunl.northeast.aws.redhat-demo.com
  to:
    kind: Service
    name: testflask
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
